Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18066

client mount options can be lost

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • Any client mounting lustre with a more complex mgs NID string
    • 3
    • 9223372036854775807

      In testing of IPv6 it was found passing in a more complex MGS nid string with multiple entries exposed a bug in mount options handling where an option could be lost that is passed to the client layer.

            simmonsja James A Simmons
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: