LU-18066 obdclass: reorder s1 string instead of options string

Testing with client mounts with multiple MGS NIDs exposed a bug
in that mount options could be lost. In this case user_xattr
from our testing. The mistake was moving the s2 string into the
wrong string; options; instead of s1.

Fixes: 415fa27540 ("LU-9325 obdclass: use match_table for server mount options")
Change-Id: I0a5e1511d558e4600a009b7e7820f68d399bcc21
Signed-off-by: James Simmons <jsimmons@infradead.org>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55839
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Maximilian Dilger <mdilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>